fix spacing and line-breaks

--- a/src/App.css
+++ b/src/App.css
@@ -36,7 +36,7 @@
 .clickable-fragment {
   cursor: pointer;
   position: absolute;
-  white-space: nowrap;
+  white-space: pre-wrap;
 }
 .fragment {
   display: inline-block;
@@ -58,6 +58,7 @@
   width: 50%;
   text-align: left;
   padding-left: 30px;
+  overflow-y: scroll;
 }
 .left-frag-container {
   width: 100%;
@@ -67,4 +68,5 @@
   border-right: 1px solid black;
   width: 50%;
   position: relative;
+  overflow-y: scroll;
 }
